--- a/.gitignore
+++ b/.gitignore
@@ -48,17 +48,18 @@ coverage.xml
 docs/_build/
 # PyBuilder
 target/
-.pyc
-.jpg
+*.pyc
+*.jpg
 data/
 model/
 log/
-.txt
+*.txt
 .ckpt
-.JPEG
-.png
+*.JPEG
+*.png
 hair/
 .idea/
+*.mdb
 
 
 # Specified for project
